--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,23 +1,16 @@
 plugins {
     id 'com.android.application'
-//    id 'org.jetbrains.kotlin.android'
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
-    /*
-        id 'com.android.application'
-        id 'kotlin-android'
-        id 'kotlin-kapt'
-        id 'dagger.hilt.android.plugin'
-     */
 }
 
 android {
-    namespace 'org.sctgamingllc'
+    namespace 'org.sctgamingllc.cryptocurrencyapp'
     compileSdk 33
 
     defaultConfig {
-        applicationId 'org.sctgamingllc'
+        applicationId 'org.sctgamingllc.cryptocurrencyapp'
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -45,12 +38,6 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion '1.3.0'
     }
-
-    /*
-    composeOptions {
-    kotlinCompilerExtensionVersion compose_version
-}
-     */
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -62,15 +49,11 @@ android {
 }
 
 dependencies {
-
-//    kapt("groupId:artifactId:version")
-
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_version" // Do NOT Change!!!!!
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-
     implementation 'androidx.compose.material3:material3:1.1.0-alpha04' // Do NOT Change!!!!!
     implementation 'androidx.compose.material:material:1.3.1'
 
@@ -80,24 +63,6 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-    /*
-        implementation 'androidx.core:core-ktx:1.6.0'
-        implementation 'androidx.appcompat:appcompat:1.3.1'
-        implementation 'com.google.android.material:material:1.4.0'
-        implementation "androidx.compose.ui:ui:$compose_version"
-        implementation "androidx.compose.material:material:$compose_version"
-        implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-        implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-        implementation 'androidx.activity:activity-compose:1.3.1'
-        testImplementation 'junit:junit:4.+'
-        androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-        androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-        androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-        debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-     */
-    // ===============================================================================================
-    // ===============================================================================================
-    // ===============================================================================================
 
     // Compose dependencies
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07"
@@ -116,20 +81,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
-    /*
-    def lifecycle_version = "2.4.1"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-     */
 
     //Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.44.2"
     kapt "com.google.dagger:hilt-android-compiler:2.44.2"
-//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
-//    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha03'
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
