--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+          package="org.sctgamingllc.cryptocurrencyapp">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.BasicAndroidComposeApp"
-        tools:targetApi="31">
-        <activity
-            android:name=".cryptocurrencyapp.presentation.MainActivity"
-            android:exported="true"
+            android:name=".CoinApplication"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:theme="@style/Theme.BasicAndroidComposeApp">
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/Theme.CryptocurrencyAppTheme">
+        <activity
+                android:name=".presentation.MainActivity"
+                android:exported="true"
+                android:theme="@style/Theme.CryptocurrencyAppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
