--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,20 @@ plugins {
 }
 
 android {
+
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.4.2"
+    }
+
+    kotlinOptions {
+        jvmTarget = "11"
+    }
+
     namespace 'org.sctgamingllc.cryptocurrencyapp'
     compileSdk 33
 
@@ -15,11 +29,7 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables {
-            useSupportLibrary true
-        }
     }
 
     buildTypes {
@@ -29,18 +39,16 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.0'
+        kotlinCompilerExtensionVersion '1.4.2'
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
@@ -54,7 +62,7 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_version" // Do NOT Change!!!!!
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.1.0-alpha04' // Do NOT Change!!!!!
+    implementation 'androidx.compose.material3:material3:1.1.0-alpha06' // Do NOT Change!!!!!
     implementation 'androidx.compose.material:material:1.3.1'
 
     testImplementation 'junit:junit:4.13.2'
@@ -65,8 +73,8 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
     // Compose dependencies
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07"
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha08"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-beta01"
+    implementation "androidx.navigation:navigation-compose:2.6.0-alpha05"
     implementation "com.google.accompanist:accompanist-flowlayout:0.17.0"
 
     // Compose Material 3
@@ -74,8 +82,8 @@ dependencies {
     implementation "androidx.compose.material3:material3-window-size-class:1.0.1"
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
     // Coroutine Lifecycle Scopes
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
