Present random or specific quotes from a number of christian bibles.

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "BasicAndroidComposeDaggerApp"
+rootProject.name = "BibleQuotes"
 include ':app'
