--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="org.sctgamingllc.cryptocurrencyapp">
+          package="org.sctgamingllc.biblequotes">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-            android:name=".CoinApplication"
+            android:name="org.sctgamingllc.biblequotes.CoinApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.CryptocurrencyAppTheme">
+            android:theme="@style/Theme.SctGamingllcTheme">
         <activity
-                android:name=".presentation.MainActivity"
+                android:name="org.sctgamingllc.biblequotes.presentation.MainActivity"
                 android:exported="true"
-                android:theme="@style/Theme.CryptocurrencyAppTheme">
+                android:theme="@style/Theme.SctGamingllcTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
